[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/worlds/scripts/TextBox.gd" type="Script" id=1]
[ext_resource path="res://src/UI/background/intro.png" type="Texture" id=2]
[ext_resource path="res://src/sounds/sfx/dialogue.wav" type="AudioStream" id=3]
[ext_resource path="res://src/UI/fonts/text_dynamicfont.tres" type="DynamicFont" id=4]
[ext_resource path="res://src/shaders/wave.tres" type="Material" id=5]
[ext_resource path="res://src/sounds/sfx/intro_boss.wav" type="AudioStream" id=6]

[sub_resource type="Animation" id=3]
resource_name = "fade"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 1, 1, 1 )

[node name="Intro" type="Node2D"]

[node name="TextBox" type="CanvasLayer" parent="."]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="TextBox"]
position = Vector2( 640, 360 )
texture = ExtResource( 2 )

[node name="Wave" type="ColorRect" parent="TextBox"]
material = ExtResource( 5 )
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IntroTransition" type="CanvasLayer" parent="TextBox"]

[node name="ColorRect" type="ColorRect" parent="TextBox/IntroTransition"]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="TextBox/IntroTransition"]
anims/fade = SubResource( 3 )

[node name="TextboxContainer" type="MarginContainer" parent="TextBox"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = -208.0
margin_right = -24.0
margin_bottom = -24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="TextBox/TextboxContainer"]
margin_right = 1232.0
margin_bottom = 184.0
custom_styles/panel = SubResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="TextBox/TextboxContainer"]
margin_right = 1232.0
margin_bottom = 184.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="HBoxContainer" type="HBoxContainer" parent="TextBox/TextboxContainer/MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 1207.0
margin_bottom = 159.0

[node name="Label" type="Label" parent="TextBox/TextboxContainer/MarginContainer/HBoxContainer"]
margin_right = 1157.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 2
custom_fonts/font = ExtResource( 4 )
text = "Text"

[node name="End" type="Label" parent="TextBox/TextboxContainer/MarginContainer/HBoxContainer"]
margin_left = 1161.0
margin_top = 86.0
margin_right = 1182.0
margin_bottom = 134.0
size_flags_vertical = 8
custom_fonts/font = ExtResource( 4 )
text = ">"

[node name="Timer" type="Timer" parent="TextBox"]

[node name="DialogueSFX" type="AudioStreamPlayer" parent="TextBox"]
stream = ExtResource( 3 )

[node name="IntroBoss" type="AudioStreamPlayer" parent="TextBox"]
stream = ExtResource( 6 )

[node name="Tween" type="Tween" parent="TextBox"]

[connection signal="animation_finished" from="TextBox/IntroTransition/AnimationPlayer" to="TextBox" method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="TextBox/Timer" to="TextBox" method="_on_Timer_timeout"]
[connection signal="tween_completed" from="TextBox/Tween" to="TextBox" method="_on_Tween_tween_completed"]
